--- a/TP 2/css/styles.css
+++ b/TP 2/css/styles.css
@@ -43,17 +43,10 @@ a:hover {
     border-radius: 40px;
 }
 
-.cuadrado {
-    width: 60px;
-    height: 60px;
-    background-color: white;
-    cursor: pointer;
-}
-
 #grid {
     display: grid;
-    grid-template-columns: repeat(50, 15px);
-    grid-template-rows: repeat(50, 15px);
+    grid-template-columns: repeat(95, 15px);
+    grid-template-rows: repeat(95, 15px);
     gap: 1px;
     margin-top: 20px;
 }
@@ -62,9 +55,27 @@ a:hover {
     width: 15px;
     height: 15px;
     background-color: white;
-    border: 1px solid white;
+    border: 1px solid black;
 }
 
 .celula.alive {
     background-color: black;
+}
+
+.boton {
+    border: none;
+    color: whitesmoke;
+    background-color: brown;
+    padding: 14px 28px;
+    cursor: pointer;
+    border-radius: 5px;
+    transition: box-shadow 0.3s ease-in-out;
+}
+
+.boton:hover {
+    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.3);
+}
+
+.boton:active {
+    transform: scale(0.9);
 }
