--- a/TP 2/css/styles.css
+++ b/TP 2/css/styles.css
@@ -43,7 +43,7 @@ a:hover {
     border-radius: 40px;
 }
 
-#grid {
+.grid {
     display: grid;
     grid-template-columns: repeat(95, 15px);
     grid-template-rows: repeat(95, 15px);
@@ -66,6 +66,12 @@ a:hover {
     transform: scale(1.2);
 }
 
+.numGen {
+    font-family: "Quicksand", sans-serif;
+    font-weight: bold;
+    font-size: 1em;
+}
+
 .boton {
     border: none;
     color: whitesmoke;
@@ -74,6 +80,10 @@ a:hover {
     cursor: pointer;
     border-radius: 5px;
     transition: box-shadow 0.3s ease-in-out;
+}
+
+.boton.inactivo {
+    background-color: gray;
 }
 
 .boton:hover {
