--- a/TP 2/css/styles.css
+++ b/TP 2/css/styles.css
@@ -147,3 +147,7 @@ a:hover {
     align-items: flex-start; /* Alinear horizontalmente a la izquierda */ 
     left: 0; /* Alinea la imagen a la izquierda */
 }
+
+.a {
+    padding: 30px;
+}
