--- a/TP 2/css/styles.css
+++ b/TP 2/css/styles.css
@@ -97,18 +97,19 @@ a:hover {
 .contenedor {
     display: grid;
     grid-template-columns: repeat(4, 1fr); /* 4 columnas iguales */
-    gap: 1%; /* Espacio entre columnas */
+    gap: 2%; /* Espacio entre columnas */
     justify-content: space-around;
 }
 
 .columna {
-    padding: 20px;  /* margen dentro de la caja */
+    padding: 30px;  /* margen dentro de la caja */
     box-sizing: border-box;
-    height: 30vh;
+    height: auto;
     background-size: cover;
     display: flex; /* Para que los elementos internos sigan usando flex si es necesario */
     flex-direction: column;
     align-items: center;
+    justify-content: flex-start;
 }
 
 
@@ -141,11 +142,14 @@ a:hover {
 
 .textoReglas {
     font-family: "Quicksand", sans-serif;
+    font-size: 1.1em;
+    line-height: 1.6em;
+    margin-bottom: 1.5em;
 }
 
 .imagenRegla {
-    height: 150px;
-    width: auto;
+    height: auto;
+    width: 100%;
     margin: 2%;
     justify-content: center; /* Centrar verticalmente */
     align-items: flex-start; /* Alinear horizontalmente a la izquierda */ 
