--- a/TP 2/css/styles-patrones.css
+++ b/TP 2/css/styles-patrones.css
@@ -7,6 +7,50 @@ body {
     background-color: #DDD0C8;
 }
 
+.seccion-patrones {
+    position: relative;
+    padding: 50px;
+}
+
+.titulo {
+    font-family: "Quicksand", sans-serif;
+    font-weight: bold;
+    font-size: 3em;
+    text-align: center;justify-content: center;
+}
+
+.cards-patrones {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding: 35px 0px;
+    margin: auto;
+}
+
+.tipo-patron {
+    background-color: yellow;
+    width: 300px;
+    height: 350px;
+    text-align: center;
+    border-radius: 8px;
+    margin: 20px;
+}
+
+.titulo-patron {
+    font-family: "Space Grotesk", sans-serif;
+    font-weight: normal;
+    font-size: 1.1cm;
+    height: 100px;
+}
+
+.video {
+    height: 95%;
+    width: 95%;
+}
+
+
+/* viejo */
+
 .contenedor {
     display: grid;
     grid-template-columns: repeat(4, 1fr); /* 4 columnas iguales */
