--- a/TP 2/css/styles-patrones.css
+++ b/TP 2/css/styles-patrones.css
@@ -7,8 +7,8 @@ body {
     background-color: #DDD0C8;
 }
 
-/* Sección de patrones */
-.seccion-patrones {
+/* Sección de tipos de patrones */
+.seccion-tipos-patrones {
     position: relative;
     padding: 50px;
 }
@@ -58,6 +58,7 @@ body {
     transform: rotateY(180deg);
 }
 
+/* Parte de adelante de la card */
 .tipo-patron-frente {
     position: absolute;
     width: 100%;
@@ -65,7 +66,8 @@ body {
     margin-top: 10px;
     backface-visibility: hidden;
 }
-  
+
+/* Parte de atrás de la card */
 .tipo-patron-atras {
     text-align: center;
     backface-visibility: hidden;
@@ -92,7 +94,6 @@ body {
 }
 
 /* Texto de la parte de atrás de las flip cards */
-
 .texto-info {
     font-family: "Quicksand", sans-serif;
     font-weight: bold;
@@ -101,43 +102,54 @@ body {
     margin: 40px;
 }
 
+/*-------------------------------------------------------*/
 
-
-
-
-/* viejo */
-
-.contenedor {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr); /* 4 columnas iguales */
-    gap: 2%; /* Espacio entre columnas */
-    justify-content: space-around;
+/* Sección de patrones */
+.seccion-patrones {
+    position: relative;
+    padding-top: 50px;
+    padding-inline: 15px;
 }
 
-.columna {
-    padding: 30px;  /* margen dentro de la caja */
-    box-sizing: border-box;
+/* Slider de un patrón */
+.slider-patron {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 80px 0px;
+    margin: auto;
+}
+
+/* Modificación del titulo interno */
+
+.slider-patron .titulo-patron {
     height: auto;
-    background-size: cover;
-    display: flex; /* Para que los elementos internos sigan usando flex si es necesario */
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-start;
 }
 
-
-.tituloReglas {
-    font-family: "Quicksand", sans-serif;
-    font-weight: bold;
-    font-size: 2em;
-    text-align: center;
-    margin: 5%;
+/* Lugar donde colocamos las imágenes de un patrón */
+.patron-imagenes {
+    width: 100%;
+    height: auto;
+    margin: 25px auto 0;
 }
 
-.tituloPatrones {
-    font-family: "Quicksand", sans-serif;
-    font-weight: bold;
-    font-size: 3em;
-    margin: 5%;
-    text-align: center;
+/* Lista de imagenes de un patrón */
+.lista-ejemplos-patron {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding: 0;
+    width: 100%;
+    height: 200px;
+}
+
+/* Item de imagenes de un patrón */
+.item-ejemplos-patron {
+    list-style: none;
+}
+
+/* Imágen de cada item */
+.item-imagen {
+    width: 200px;
+    height: 100%;
+    margin-inline: 10px;
 }
